...
        </Text>
        <Text style={styles.textTitle}>
          Short summary:{'  '}
          <Text style={styles.textInfo}>{movie.summary_short}</Text>
        </Text>
      </ScrollView>
      <Button title="Read in browser" onPress={link} />
      <Button title="Back" onPress={() => navigation.goBack()} />
    </BaseLayout>
  );
};

const mapStateToProps = (state: { movies: { movies: MoviesDataType } }) => {
  return {
...
